# clipboard-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: char_filter.rs  config.rs  config_loader.rs  content_textbox.rs  encoding_dropdown.rs  main.rs  main_window.rs  profile_dropdown.rs  targets_list.rs  text_transformation.rs
src/assets/: default-config.yaml  main_window.glade
