[package]
name = "clipboard-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "x11-dl" ]

[dependencies]
gtk = { version="0.15.5", features = ["v3_24"] }
gdk = { version="0.15.4" }
glib = "0.15.12"
gio = "0.15.12"
libc = "0.2.126"
parking_lot = "0.12.1"
derivative = "2.2.0"
anyhow = "1.0.58"
encoding = "0.2.33"
mime = "0.3.16"
serde = { version="1.0.137", features=["derive"] }
serde_yaml = "0.8.24"
toml = "0.5.9"
directories = "4.0.1"
convert_case = "0.5.0"
itertools = "0.10.3"

#hotkey = "0.3.1"
#tauri-hotkey = "0.1.2"

[dependencies.x11-dl]
version = "2.19.1"
optional = true

[profile.release]
strip = true
opt-level = "z"
lto = true